# lia-cores-alegria

./: README.md
cluster_image/: main.py  pyproject.toml
cluster_image/CA_processada/: CA20220920-10a.TIF  CA20220920-11a.TIF  CA20220920-12a.TIF  CA20220920-1a.TIF  CA20220920-2a.TIF  CA20220920-3a.TIF  CA20220920-4a.TIF  CA20220920-5a.TIF  CA20220920-6a.TIF  CA20220920-8a.TIF  CA20220920-9a.TIF  CA20220920-Xa.TIF  CA20220920-Ya.TIF
cluster_image/CA_processada/CA_deletados/: CA20220920-10b.TIF  CA20220920-11b.TIF  CA20220920-12b.TIF  CA20220920-1b.TIF  CA20220920-2b.TIF  CA20220920-3b.TIF  CA20220920-4b.TIF  CA20220920-5b.TIF  CA20220920-6b.TIF  CA20220920-8b.TIF  CA20220920-9b.TIF  CA20220920-Xb.TIF  CA20220920-Yb.TIF
cluster_image/src/: analise_hsv.py  analise_tracos.py  analise_tracos_corrigida.csv  classificacao_clip_cores.csv  clip_cores.py  cores_dominantes.csv  cores_dominantes.py  cores_dominantes_hsv.csv  dataset_imagens.csv  densidade_saturacao.csv  densidade_saturacao.py  histograma.csv  histograma_cores.csv  histograma_cores.py  hsv_puro.csv  resumo_imagens.txt  upload.py  verifica_formato.py
